# expertim_keboola

./: .gitignore  README.md  pyproject.toml  setup.sh
data/: superstore_sample_order.csv  superstore_sample_product.csv
documentation/: DATA_UPLOAD_INSTRUCTIONS.md  INDEX.md  PRESENTATION_GUIDE.md  QUICK_LINKS.md  README.md  SUMMARY.md  WEBINAR_GUIDE.md
notebooks/: notepad.ipynb
queries/: SELECTbqsql
