[project]
name = "minimum-viable-python"
version = "0.1.0"
description = "Python 3.11 project with data analysis packages"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
    "jupyter>=1.0.0",
    "ipython>=8.12.0",
    "scikit-learn>=1.3.0",
    "openpyxl>=3.1.0",
    "plotly>=5.14.0",
]
